[package]
name = "git_auto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", optional = true, features = ["winuser","winbase"] }



[features]
default = []
windows-specific = ["winapi"]
